# sherlog

./: .gitignore  README.md  package-lock.json  package.json  tailwind.config.mjs
parser-wasm/: Cargo.toml
parser-wasm/pkg/: parser_wasm.d.ts  parser_wasm.js  parser_wasm_bg.wasm  parser_wasm_bg.wasm.d.ts
parser-wasm/src/: lib.rs  pattern_learning.rs
public/wasm/: package.json  parser_wasm.d.ts  parser_wasm.js  parser_wasm_bg.wasm  parser_wasm_bg.wasm.d.ts
src/components/: LogAnalyzer.tsx
src/components/LogAnalyzer/: index.tsx
src/components/LogAnalyzer/components/: ErrorDetailSheet.tsx  ErrorTable.tsx  HeaderUpload.tsx  PatternLearningModal.tsx  ResultsView.tsx  SummaryCard.tsx  UploadSection.tsx  index.ts
src/components/LogAnalyzer/hooks/: index.ts  useLogParser.ts  usePatternLearning.ts  useTheme.ts
src/components/ui/: file-uploader.tsx  simple-file-upload.tsx  sonner.tsx
src/layouts/: main.astro
src/lib/: pattern-storage.ts  wasm-parser.ts
src/pages/: index.astro
src/styles/: global.css
