[package]
name = "parser-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
regex = "1.10"
lazy_static = "1.4"
blake3 = "1.5"
uuid = { version = "1.6", features = ["v4", "js"] }
chrono = { version = "0.4", features = ["wasmbind"] }
web-sys = { version = "0.3", features = ["console"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
